; ModuleID = '/home/carl/AnghaBench/TDengine/src/client/src/extr_tscSchemaUtil.c_extractDBName.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/client/src/extr_tscSchemaUtil.c_extractDBName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32, i32 }

@TS_PATH_DELIMITER = common dso_local global i32* null, align 8
@TK_STRING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local { i8*, i64 } @extractDBName(i8* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32*, i32** @TS_PATH_DELIMITER, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = load i32, i32* %9, align 4
  %11 = call i8* @skipSegments(i8* %7, i32 %10, i32 1)
  store i8* %11, i8** %6, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i32*, i32** @TS_PATH_DELIMITER, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @copySegment(i8* %12, i8* %13, i32 %16)
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %19 = load i8*, i8** %5, align 8
  store i8* %19, i8** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %21 = load i32, i32* @TK_STRING, align 4
  store i32 %21, i32* %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 2
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @strlen(i8* %23)
  store i32 %24, i32* %22, align 4
  %25 = bitcast %struct.TYPE_3__* %3 to { i8*, i64 }*
  %26 = load { i8*, i64 }, { i8*, i64 }* %25, align 8
  ret { i8*, i64 } %26
}

declare dso_local i8* @skipSegments(i8*, i32, i32) #1

declare dso_local i32 @copySegment(i8*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
